<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.8"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.7"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.6"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.25"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent=".75"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt0"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonZero"
        app:layout_constraintBottom_toTopOf="@id/gHor1"
        app:layout_constraintEnd_toStartOf="@id/gVer3"
        app:layout_constraintStart_toEndOf="@id/gVer1"
        app:layout_constraintTop_toBottomOf="@id/gHor2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btComma"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonComma"
        app:layout_constraintBottom_toTopOf="@id/gHor1"
        app:layout_constraintEnd_toStartOf="@id/gVer4"
        app:layout_constraintStart_toEndOf="@id/gVer3"
        app:layout_constraintTop_toBottomOf="@id/gHor2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEqual"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonEqual"
        app:layout_constraintBottom_toTopOf="@id/gHor1"
        app:layout_constraintEnd_toStartOf="@id/gVer5"
        app:layout_constraintStart_toEndOf="@id/gVer4"
        app:layout_constraintTop_toBottomOf="@id/gHor2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt1"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonOne"
        app:layout_constraintBottom_toTopOf="@id/gHor2"
        app:layout_constraintEnd_toStartOf="@id/gVer2"
        app:layout_constraintStart_toEndOf="@id/gVer1"
        app:layout_constraintTop_toBottomOf="@id/gHor3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt2"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonTwo"
        app:layout_constraintBottom_toTopOf="@id/gHor2"
        app:layout_constraintEnd_toStartOf="@id/gVer3"
        app:layout_constraintStart_toEndOf="@id/gVer2"
        app:layout_constraintTop_toBottomOf="@id/gHor3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt3"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonThree"
        app:layout_constraintBottom_toTopOf="@id/gHor2"
        app:layout_constraintEnd_toStartOf="@id/gVer4"
        app:layout_constraintStart_toEndOf="@id/gVer3"
        app:layout_constraintTop_toBottomOf="@id/gHor3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt4"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonFour"
        app:layout_constraintBottom_toTopOf="@id/gHor3"
        app:layout_constraintEnd_toStartOf="@id/gVer2"
        app:layout_constraintStart_toEndOf="@id/gVer1"
        app:layout_constraintTop_toBottomOf="@id/gHor4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt5"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonFive"
        app:layout_constraintBottom_toTopOf="@id/gHor3"
        app:layout_constraintEnd_toStartOf="@id/gVer3"
        app:layout_constraintStart_toEndOf="@id/gVer2"
        app:layout_constraintTop_toBottomOf="@id/gHor4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt6"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonSix"
        app:layout_constraintBottom_toTopOf="@id/gHor3"
        app:layout_constraintEnd_toStartOf="@id/gVer4"
        app:layout_constraintStart_toEndOf="@id/gVer3"
        app:layout_constraintTop_toBottomOf="@id/gHor4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt7"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonSeven"
        app:layout_constraintBottom_toTopOf="@id/gHor4"
        app:layout_constraintEnd_toStartOf="@id/gVer2"
        app:layout_constraintStart_toEndOf="@id/gVer1"
        app:layout_constraintTop_toBottomOf="@id/gHor5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt8"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonEight"
        app:layout_constraintBottom_toTopOf="@id/gHor4"
        app:layout_constraintEnd_toStartOf="@id/gVer3"
        app:layout_constraintStart_toEndOf="@id/gVer2"
        app:layout_constraintTop_toBottomOf="@id/gHor5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt9"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonNine"
        app:layout_constraintBottom_toTopOf="@id/gHor4"
        app:layout_constraintEnd_toStartOf="@id/gVer4"
        app:layout_constraintStart_toEndOf="@id/gVer3"
        app:layout_constraintTop_toBottomOf="@id/gHor5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btClear"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonClear"
        app:layout_constraintBottom_toTopOf="@id/gHor5"
        app:layout_constraintEnd_toStartOf="@id/gVer4"
        app:layout_constraintStart_toEndOf="@id/gVer1"
        app:layout_constraintTop_toBottomOf="@id/gHor6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btPlus"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonPlus"
        app:layout_constraintBottom_toTopOf="@id/gHor2"
        app:layout_constraintEnd_toStartOf="@id/gVer5"
        app:layout_constraintStart_toEndOf="@id/gVer4"
        app:layout_constraintTop_toBottomOf="@id/gHor3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMinus"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonMinus"
        app:layout_constraintBottom_toTopOf="@id/gHor3"
        app:layout_constraintEnd_toStartOf="@id/gVer5"
        app:layout_constraintStart_toEndOf="@id/gVer4"
        app:layout_constraintTop_toBottomOf="@id/gHor4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMult"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonMult"
        app:layout_constraintBottom_toTopOf="@id/gHor4"
        app:layout_constraintEnd_toStartOf="@id/gVer5"
        app:layout_constraintStart_toEndOf="@id/gVer4"
        app:layout_constraintTop_toBottomOf="@id/gHor5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btDiv"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonDiv"
        app:layout_constraintBottom_toTopOf="@id/gHor5"
        app:layout_constraintEnd_toStartOf="@id/gVer5"
        app:layout_constraintStart_toEndOf="@id/gVer4"
        app:layout_constraintTop_toBottomOf="@id/gHor6" />

    <View
        android:id="@+id/separator"
        style="@style/Separator"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/gHor1"
        app:layout_constraintEnd_toEndOf="@id/gVer4"
        app:layout_constraintStart_toStartOf="@id/gVer4"
        app:layout_constraintTop_toTopOf="@id/gHor6" />

    <TextView
        android:id="@+id/screen"
        style="@style/ScreenNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center|end"
        android:text="@string/buttonZero"
        app:layout_constraintBottom_toTopOf="@id/gHor6"
        app:layout_constraintEnd_toStartOf="@id/gVer5"
        app:layout_constraintStart_toEndOf="@id/gVer1"
        app:layout_constraintTop_toBottomOf="@id/gHor7" />

</androidx.constraintlayout.widget.ConstraintLayout>